--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="./style.css">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;900&display=swap" rel="stylesheet">
-    <title>We care</title>
+    <title>Pet</title>
 </head>
 
 <body>
